<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.dani.slidsaw_beta.LevelActivity"
    android:clickable="false"
    android:gravity="center">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/LevelText"
        android:id="@+id/LevelText"
        android:gravity="center"
        android:layout_above="@+id/linear"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:textSize="30dp"
        android:textStyle="bold" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linear"
        android:gravity="center"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/easy"
            android:id="@+id/easy"
            android:textSize="15sp"
            android:background="@color/fourth_color"
            android:onClick="onClick"
            android:layout_above="@+id/medium"
            android:layout_alignStart="@+id/hard"
            android:layout_marginBottom="10dp" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/medium"
            android:id="@+id/medium"
            android:textSize="15sp"
            android:background="@color/primary_dark_color"
            android:onClick="onClick"
            android:layout_alignEnd="@+id/hard"
            android:layout_marginBottom="10dp" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/hard"
            android:id="@+id/hard"
            android:textSize="15sp"
            android:onClick="onClick"
            android:background= "@color/terciary_color"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp" />
    </LinearLayout>

</RelativeLayout>
