<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    
    android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".StartActivity"
    android:id="@+id/rl"
    android:gravity="center"
    android:touchscreenBlocksFocus="false"
    android:transitionGroup="false">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/linearLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/s"
            android:id="@+id/S" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/l"
            android:id="@+id/L" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/i"
            android:id="@+id/I" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/d"
            android:id="@+id/D" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/s"
            android:id="@+id/S2" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/a"
            android:id="@+id/A" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/w"
            android:id="@+id/W" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@id/vertical"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="50dp"
        android:baselineAligned="true">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/play"
            android:id="@+id/play"
            android:onClick="onClick"
            android:background="@color/secundary_color"
            android:elevation="8dp"
            android:translationZ="@dimen/abc_button_inset_vertical_material"
            android:layout_marginBottom="15dp"
            android:singleLine="true"
            android:nestedScrollingEnabled="false"
            android:textSize="15dp"
            style="@style/Animation.AppCompat.DropDownUp" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/Puntuaciones"
            android:id="@+id/scores"
            android:onClick="onToScores"
            android:background="@color/terciary_color"
            android:elevation="8dp"
            android:translationZ="@dimen/abc_button_inset_vertical_material"
            android:singleLine="true"
            android:layout_marginBottom="15dp"
            android:nestedScrollingEnabled="false"
            android:textSize="15dp"
            style="@style/Animation.AppCompat.DropDownUp" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/Help"
            android:id="@+id/help"
            android:onClick="onToHelp"
            android:background="@color/primary_dark_color"
            android:elevation="8dp"
            android:translationZ="@dimen/abc_button_inset_vertical_material"
            android:singleLine="true"
            android:layout_marginBottom="15dp"
            android:nestedScrollingEnabled="false"
            android:textSize="15dp"
            style="@style/Animation.AppCompat.DropDownUp" />



    </LinearLayout>

</RelativeLayout>